[package]
name = "touch_pad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-svc = { version = "0.47.3", default-features = false }
